--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>CONNECT</title>
     <link rel="stylesheet" href="/src/index.css" />
+    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
   </head>
-  <body class="bg-gray-900 text-gray-200">
+  <body class="min-h-screen bg-background font-sans antialiased">
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
